# image_detection_service

./: README.md
cnn_im_detect/: package.xml  setup.cfg  setup.py
cnn_im_detect/scripts/: cnn_im_detect.py
customsrv/: CMakeLists.txt  mapping_rules.yaml  package.xml
customsrv/srv/: ImgStr.srv
